# egui_struct

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md
demo/: Cargo.toml  MIT.md  README.md  build.rs  expanded.rs  refresh_translations.ps1
demo/src/: app.rs  main.rs
demo/translate/: Cargo.toml  TODO.pl.yml  en.yml  pl.yml
macros/: Cargo.toml
macros/src/: lib.rs
src/: config.rs  lib.rs  trait_impl_coll.rs  trait_impl_sets.rs  trait_impls.rs  traits.rs  types.rs  wrappers.rs
