[package]
name = "egui_struct"
authors = ["PingPongun <pp.pp4@vp.pl>"]
version = "0.3.0"
edition = "2021"
license = "MIT"
exclude = ["demo/*", ".vscode/*"]
description = "EguiStruct is a rust derive macro that creates egui UI's from arbitrary structs and enums."
repository = "https://github.com/PingPongun/egui_struct"
keywords = ["egui"]

[lib]

[dependencies]
egui_struct_macros = { path = "./macros/", version = "0.3" }
egui = { version = "0.23", default-features = false }

indexmap = { version = "2.0", optional = true }

[features]
indexmap = ["dep:indexmap"]
default = ["i18n"]
i18n = ["egui_struct_macros/i18n"]

[workspace]
members = ["demo"]
