[package]
name = "egui_struct"
authors = ["PingPongun <pp.pp4@vp.pl>"]
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
exclude = ["demo/*", ".vscode/*"]
description = "EguiStruct is a rust derive macro that creates egui UI's from arbitrary structs and enums."
repository = "https://github.com/PingPongun/egui_struct"
keywords = ["egui"]
rust-version = "1.70"

[lib]

[dependencies]
egui_struct_macros = { path = "./macros/", version = "0.5.0" }
exgrid = { path = "../ExGrid", version = "0.2.0", default-features = false }
dyn-clone = "1"

# egui dep is handled through feature to overcome cargo resolver not be able to select same egui version as used in rest of the app.
# this allows egui_struct to work with newer egui through semver patch update
# breaking-change updates (0.4, 0.5, 1., 2., ...) will update default egui version feature to newest one.
egui23 = { version = "0.23", package = "egui", default-features = false, optional = true }
egui24 = { version = "0.24", package = "egui", default-features = false, optional = true }
egui25 = { version = "0.25", package = "egui", default-features = false, optional = true }
egui26 = { version = "0.26", package = "egui", default-features = false, optional = true }
egui27 = { version = "0.27", package = "egui", default-features = false, optional = true }
egui28 = { version = "0.28", package = "egui", default-features = false, optional = true }
egui29 = { version = "0.29", package = "egui", default-features = false, optional = true }

indexmap = { version = "2", optional = true }

[features]
egui23 = ["dep:egui23", "exgrid/egui23"]
egui24 = ["dep:egui24", "exgrid/egui24"]
egui25 = ["dep:egui25", "exgrid/egui25"]
egui26 = ["dep:egui26", "exgrid/egui26"]
egui27 = ["dep:egui27", "exgrid/egui27"]
egui28 = ["dep:egui28", "egui_struct_macros/egui28", "exgrid/egui28"]
egui29 = ["dep:egui29", "egui_struct_macros/egui29", "exgrid/egui29"]
indexmap = ["dep:indexmap"]
default = ["egui29"]
i18n = ["egui_struct_macros/i18n"]

[workspace]
members = ["demo"]

[package.metadata.docs.rs]
features = ["indexmap", "i18n"]
rustdoc-args = ["--generate-link-to-definition"]
