[package]
name = "egui_struct_demo"
version = "0.2.0"
authors = ["PingPongun"]
edition = "2021"

[dependencies]
egui = "0.23.0"
eframe = { version = "0.23.0", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui_struct = { path = "../" }
rust-i18n = "2.2.1"
lazy_static = "1.4.0"
