[package]
name = "egui_struct_demo"
version = "0.5.0"
authors = ["PingPongun"]
edition = "2021"

[dependencies]
egui = "0.28"
eframe = { version = "0.28", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui_struct = { path = "../", default-features = false, features = [
    "indexmap",
    "i18n",
    "egui28",
] }
rust-i18n = { git = "https://github.com/PingPongun/rust-i18n.git" }
# rust-i18n = "2.2.1" # crates version also works correctly, but modified has some advantages, mostly optimized & more recent deps
lazy_static = "1.4.0"
indexmap = "2.5"
[features]
egui28 = []
default = ["egui28"]

[package.metadata.i18n]
# The available locales for your application, default: ["en"].
available-locales = ["en", "pl"]

# The default locale, default: "english".
default-locale = "en"

# Path for your translations YAML file, default: "locales".
# This config for let `cargo i18n` command line tool know where to find your translations.
# You must keep this path same as the one you pass to method `rust_i18n::i18n!`.
load-path = "translate"

# Generate files with `_version: 1` format
generate-version = 1
# Choose generation file extension (yaml, json, toml)
generate-extension = "yaml"
