[package]
name = "egui_struct_macros"
authors = ["PingPongun <pp.pp4@vp.pl>"]
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "EguiStruct is a rust derive macro that creates egui UI's from arbitrary structs and enums."
repository = "https://github.com/PingPongun/egui_struct"
keywords = ["egui"]
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["parsing", "extra-traits"] }
convert_case = "0.6.0"
darling = "0.20.3"

[features]
i18n = []
