[package]
name = "expanded_for_translation"
version = "0.1.0"
edition = "2021"
resolver = "2"

[package.metadata.i18n]
# The available locales for your application, default: ["en"].
available-locales = ["en", "pl"]

# The default locale, default: "english".
default-locale = "en"

# Path for your translations YAML file, default: "locales".
# This config for let `cargo i18n` command line tool know where to find your translations.
# You must keep this path same as the one you pass to method `rust_i18n::i18n!`.
load-path = "."

# Generate files with `_version: 1` format
generate-version = 1
# Choose generation file extension (yaml, json, toml)
generate-extension = "yaml"
